Atualização em planos

--- a/app/planos.html
+++ b/app/planos.html
@@ -320,6 +320,25 @@
                 min-height: auto;
             }
         }
+
+        /* Badge do plano ativo */
+        .current-plan-badge {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: linear-gradient(135deg, rgba(79, 172, 254, 0.2), rgba(0, 242, 254, 0.2));
+            border: 2px solid #4facfe;
+            color: #4facfe;
+            padding: 12px 24px;
+            border-radius: 12px;
+            font-weight: 600;
+            font-size: 16px;
+        }
+
+        .pricing-card:has(.current-plan-badge) {
+            border: 2px solid #4facfe;
+            box-shadow: 0 0 30px rgba(79, 172, 254, 0.3);
+        }
     </style>
 </head>
 
@@ -376,10 +395,13 @@
             try {
                 const user = await auth.getUser();
                 if (!user) {
-                    // Redirecionar para login se não estiver autenticado
                     window.location.href = 'login.html';
                     return false;
                 }
+
+                // Buscar assinatura ativa do usuário
+                await buscarAssinaturaAtiva();
+
                 return true;
             } catch (error) {
                 console.error('Erro ao verificar autenticação:', error);
@@ -388,9 +410,45 @@
             }
         }
 
+        async function buscarAssinaturaAtiva() {
+            try {
+                // Buscar empresa do usuário
+                const { data: empresa } = await window.supabaseClient
+                    .from('empresas')
+                    .select('id, plano_id, status')
+                    .eq('id', empresaId)
+                    .single();
+
+                if (empresa && empresa.status === 'ativo' && empresa.plano_id) {
+                    planoAtivoId = empresa.plano_id;
+
+                    // Buscar detalhes da assinatura
+                    const { data: assinatura } = await window.supabaseClient
+                        .from('assinaturas')
+                        .select('*')
+                        .eq('empresa_id', empresaId)
+                        .eq('status', 'ativa')
+                        .order('created_at', { ascending: false })
+                        .limit(1)
+                        .single();
+
+                    if (assinatura) {
+                        assinaturaAtiva = assinatura;
+                    }
+                }
+
+                console.log('Plano ativo:', planoAtivoId);
+            } catch (error) {
+                console.warn('Sem assinatura ativa:', error.message);
+            }
+        }
+
         // =====================================================
         // VARIÁVEIS GLOBAIS
         // =====================================================
+
+        let planoAtivoId = null; // ID do plano ativo do usuário
+        let assinaturaAtiva = null; // Dados da assinatura ativa
 
         let planos = [
             {
@@ -401,6 +459,8 @@
                 descricao: 'Ideal para pequenos negócios',
                 destaque: false,
                 ordem: 1,
+                payment_link_mensal: 'https://buy.stripe.com/3cIdR9gPA5xA83G4df0Jq05',
+                payment_link_anual: 'https://buy.stripe.com/9B6aEX7f06BE97KbFH0Jq02',
                 features: [
                     '5.000 produtos (Banco de Dados)',
                     '3 usuários',
@@ -418,6 +478,8 @@
                 descricao: 'Para negócios em crescimento',
                 destaque: true,
                 ordem: 2,
+                payment_link_mensal: 'https://buy.stripe.com/9B614n56S7FIcjW9xz0Jq04',
+                payment_link_anual: 'https://buy.stripe.com/3cI8wP56S2lo2Jm6ln0Jq01',
                 features: [
                     '10.000 produtos (Banco de Dados)',
                     '10 usuários',
@@ -435,6 +497,8 @@
                 descricao: 'Para redes de lojas',
                 destaque: false,
                 ordem: 3,
+                payment_link_mensal: 'https://buy.stripe.com/3cI8wP6aWaRUbfS39b0Jq03',
+                payment_link_anual: 'https://buy.stripe.com/14A9AT0QCd024RubFH0Jq00',
                 features: [
                     '50.000 produtos (Banco de Dados)',
                     '30 usuários',
@@ -452,6 +516,8 @@
                 descricao: 'Solução completa para grandes empresas',
                 destaque: false,
                 ordem: 4,
+                payment_link_mensal: null,
+                payment_link_anual: null,
                 features: [
                     'Todas as outras funcionalidades',
                     'Sob Consulta'
@@ -545,6 +611,17 @@
                                 <a href="mailto:datacerta.contato@gmail.com?subject=Interesse no plano ${plano.nome}" class="btn btn-outline">
                                     Falar com Vendas
                                 </a>
+                            ` : planoAtivoId === plano.id ? `
+                                <div class="current-plan-badge">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="width:20px;height:20px;margin-right:8px;">
+                                        <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
+                                        <polyline points="22 4 12 14.01 9 11.01"></polyline>
+                                    </svg>
+                                    Seu Plano Atual
+                                </div>
+                                <a href="assinatura.html" class="btn btn-outline" style="margin-top:10px;font-size:14px;">
+                                    Gerenciar Assinatura
+                                </a>
                             ` : `
                                 <button class="btn ${isFeatured ? 'btn-primary' : 'btn-outline'}" 
                                         onclick="selecionarPlano('${plano.id}', ${isAnual})">
@@ -570,8 +647,31 @@
                     btn.style.opacity = '0.6';
                 });
 
-                // Redirecionar para checkout da Stripe
-                await redirecionarParaCheckout(planoId, anual ? 'anual' : 'mensal');
+                // Buscar plano selecionado
+                const plano = planos.find(p => p.id === planoId);
+                if (!plano) {
+                    throw new Error('Plano não encontrado');
+                }
+
+                // Obter o Payment Link correto
+                const paymentLink = anual ? plano.payment_link_anual : plano.payment_link_mensal;
+
+                if (!paymentLink) {
+                    // Enterprise - redirecionar para contato
+                    alert('Para o plano Enterprise, entre em contato conosco!');
+                    window.location.href = 'mailto:datacerta.contato@gmail.com?subject=Interesse no Plano Enterprise';
+                    return;
+                }
+
+                // Construir URL com parâmetros de rastreamento
+                const url = new URL(paymentLink);
+                url.searchParams.set('client_reference_id', empresaId);
+                url.searchParams.set('prefilled_email', usuarioEmail);
+
+                console.log('Redirecionando para Payment Link:', url.toString());
+
+                // Redirecionar diretamente - instantâneo!
+                window.location.href = url.toString();
 
             } catch (error) {
                 console.error('Erro ao selecionar plano:', error);
