--- a/admin/alertas.html
+++ b/admin/alertas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DataCerta Admin - Dashboard</title>
+    <title>DataCerta Admin - Enviar Alertas</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/admin.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -35,7 +35,7 @@
         </div>
 
         <nav class="sidebar-nav">
-            <a href="index.html" class="nav-item active">
+            <a href="index.html" class="nav-item">
                 <span class="nav-icon">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <rect x="3" y="3" width="7" height="7" />
@@ -67,7 +67,7 @@
                 </span>
                 <span class="nav-text">Planos</span>
             </a>
-            <a href="alertas.html" class="nav-item">
+            <a href="alertas.html" class="nav-item active">
                 <span class="nav-icon">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9" />
@@ -83,7 +83,7 @@
                 <div class="user-avatar" id="userAvatar">AD</div>
                 <div class="user-details">
                     <span class="user-name" id="userName">Admin</span>
-                    <span class="user-role">Proprietário</span>
+                    <span class="user-role">Master</span>
                 </div>
             </div>
             <button class="btn btn-ghost btn-sm" onclick="auth.signOut()" style="margin-top: 10px; width: 100%;">
@@ -104,93 +104,83 @@
                     </svg>
                 </button>
                 <div class="page-title">
-                    <h1>Dashboard</h1>
-                    <p class="page-subtitle">Visão geral do DataCerta SaaS</p>
+                    <h1>Enviar Alertas</h1>
+                    <p class="page-subtitle">Envie notificações push para empresas</p>
                 </div>
             </div>
         </header>
 
-        <!-- Stats Grid -->
-        <div class="stats-grid">
-            <div class="stat-card">
-                <div class="stat-icon empresas">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M3 21h18" />
-                        <path d="M5 21V7l8-4v18" />
-                        <path d="M19 21V11l-6-4" />
-                    </svg>
-                </div>
-                <div class="stat-content">
-                    <h3 id="totalEmpresas">0</h3>
-                    <p>Empresas Ativas</p>
-                    <span class="stat-trend positive" id="trendEmpresas"></span>
-                </div>
-            </div>
+        <!-- Alert Form -->
+        <div class="admin-card" style="max-width: 600px;">
+            <h3 style="margin-bottom: 24px;">Nova Notificação</h3>
 
-            <div class="stat-card">
-                <div class="stat-icon usuarios">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
-                        <circle cx="9" cy="7" r="4" />
-                        <path d="M23 21v-2a4 4 0 0 0-3-3.87" />
-                        <path d="M16 3.13a4 4 0 0 1 0 7.75" />
-                    </svg>
+            <form id="alertForm">
+                <div class="form-group">
+                    <label for="empresaSelect">Empresa Destino</label>
+                    <select id="empresaSelect" class="form-control" required>
+                        <option value="">Carregando empresas...</option>
+                    </select>
                 </div>
-                <div class="stat-content">
-                    <h3 id="totalUsuarios">0</h3>
-                    <p>Usuários Totais</p>
-                    <span class="stat-trend positive" id="trendUsuarios"></span>
-                </div>
-            </div>
 
-            <div class="stat-card">
-                <div class="stat-icon receita">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <line x1="12" y1="1" x2="12" y2="23" />
-                        <path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6" />
-                    </svg>
+                <div class="form-group">
+                    <label for="prioridadeSelect">Prioridade</label>
+                    <select id="prioridadeSelect" class="form-control">
+                        <option value="normal">Normal</option>
+                        <option value="alta">Alta ⚠️</option>
+                        <option value="urgente">Urgente 🚨</option>
+                    </select>
                 </div>
-                <div class="stat-content">
-                    <h3 id="receitaMensal">R$ 0</h3>
-                    <p>Receita Mensal</p>
-                    <span class="stat-trend positive" id="trendReceita"></span>
-                </div>
-            </div>
 
-            <div class="stat-card">
-                <div class="stat-icon alertas">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path
-                            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z" />
-                        <line x1="12" y1="9" x2="12" y2="13" />
-                        <line x1="12" y1="17" x2="12.01" y2="17" />
-                    </svg>
+                <div class="form-group">
+                    <label for="tituloInput">Título</label>
+                    <input type="text" id="tituloInput" class="form-control" placeholder="Ex: Aviso Importante"
+                        maxlength="100" required>
+                    <small class="form-hint"><span id="tituloCount">0</span>/100 caracteres</small>
                 </div>
-                <div class="stat-content">
-                    <h3 id="trialsExpirando">0</h3>
-                    <p>Trials Expirando</p>
-                    <span class="stat-trend" id="trendTrials"></span>
+
+                <div class="form-group">
+                    <label for="mensagemInput">Mensagem</label>
+                    <textarea id="mensagemInput" class="form-control" rows="4"
+                        placeholder="Digite a mensagem do alerta..." maxlength="500" required></textarea>
+                    <small class="form-hint"><span id="mensagemCount">0</span>/500 caracteres</small>
                 </div>
-            </div>
+
+                <div class="form-group">
+                    <label class="checkbox-label">
+                        <input type="checkbox" id="enviarPush" checked>
+                        <span>Enviar também como Push Notification (celular)</span>
+                    </label>
+                </div>
+
+                <div class="form-actions" style="margin-top: 24px;">
+                    <button type="submit" class="btn btn-primary" id="btnEnviar">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18"
+                            height="18">
+                            <line x1="22" y1="2" x2="11" y2="13" />
+                            <polygon points="22 2 15 22 11 13 2 9 22 2" />
+                        </svg>
+                        Enviar Alerta
+                    </button>
+                </div>
+            </form>
         </div>
 
-        <!-- Recent Empresas -->
-        <div class="admin-table-section">
+        <!-- Recent Alerts -->
+        <div class="admin-table-section" style="margin-top: 32px;">
             <div class="admin-table-header">
-                <h2>Empresas Recentes</h2>
-                <a href="empresas.html" class="btn btn-outline btn-sm">Ver todas</a>
+                <h2>Alertas Enviados Recentemente</h2>
             </div>
             <div class="table-wrapper">
                 <table class="data-table">
                     <thead>
                         <tr>
                             <th>Empresa</th>
-                            <th>Plano</th>
-                            <th>Status</th>
-                            <th>Criado em</th>
+                            <th>Título</th>
+                            <th>Prioridade</th>
+                            <th>Data</th>
                         </tr>
                     </thead>
-                    <tbody id="recentEmpresas">
+                    <tbody id="recentAlerts">
                         <tr>
                             <td colspan="4" class="empty-state">
                                 <p>Carregando...</p>
@@ -202,9 +192,13 @@
         </div>
     </main>
 
+    <!-- Toast Container -->
+    <div id="toastContainer" class="toast-container"></div>
+
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../js/supabase.js"></script>
     <script src="js/admin.js"></script>
+    <script src="js/alertas.js"></script>
 </body>
 
 </html>
