--- a/index.html
+++ b/index.html
@@ -1304,20 +1304,11 @@
             </div>
 
             <div class="footer-column">
-                <h4>Empresa</h4>
-                <ul>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contato</a></li>
-                </ul>
-            </div>
-
-            <div class="footer-column">
                 <h4>Suporte</h4>
                 <ul>
-                    <li><a href="#">Central de Ajuda</a></li>
-                    <li><a href="#">Documentação</a></li>
-                    <li><a href="mailto:suporte@datacerta.com.br">suporte@datacerta.com.br</a></li>
+                    <li><a href="help/guia-usuario.html">Documentação</a></li>
+                    <li><a href="help/faq.html">Perguntas e Respostas</a></li>
+                    <li><a href="mailto:datacerta.contato@gmail.com">datacerta.contato@gmail.com</a></li>
                 </ul>
             </div>
         </div>
@@ -1326,7 +1317,7 @@
             <p>&copy; 2026 DataCerta. Todos os direitos reservados.</p>
             <p>
                 <a href="#">Termos de Uso</a> ·
-                <a href="#">Política de Privacidade</a>
+                <a href="help/politica-privacidade.html">Política de Privacidade</a>
             </p>
         </div>
     </footer>
@@ -1493,7 +1484,7 @@
                         
                         <div class="plan-cta">
                             ${isContact ? `
-                                <a href="mailto:suporte@datacerta.com.br?subject=Interesse no plano ${plano.nome}" class="btn btn-outline">
+                                <a href="mailto:datacerta.contato@gmail.com?subject=Interesse no plano ${plano.nome}" class="btn btn-outline">
                                     Falar com Vendas
                                 </a>
                             ` : `
