--- a/help/faq.html
+++ b/help/faq.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perguntas Frequentes - DataCerta</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
     <style>
@@ -994,7 +994,7 @@
             </div>
         </div>
 
-        <a href="app/dashboard.html" class="back-btn">
+        <a href="../app/dashboard.html" class="back-btn">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18">
                 <path d="M19 12H5M12 19l-7-7 7-7" />
             </svg>
