--- a/index.html
+++ b/index.html
@@ -1308,6 +1308,13 @@
                 <ul>
                     <li><a href="help/guia-usuario.html">Documentação</a></li>
                     <li><a href="help/faq.html">Perguntas e Respostas</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <h4>Contato</h4>
+                <ul>
+                    <li><a href="help/contato.html">Entre em Contato</a></li>
                     <li><a href="mailto:datacerta.contato@gmail.com">datacerta.contato@gmail.com</a></li>
                 </ul>
             </div>
@@ -1484,7 +1491,7 @@
                         
                         <div class="plan-cta">
                             ${isContact ? `
-                                <a href="mailto:datacerta.contato@gmail.com?subject=Interesse no plano ${plano.nome}" class="btn btn-outline">
+                                <a href="help/contato.html" class="btn btn-outline">
                                     Falar com Vendas
                                 </a>
                             ` : `
