--- a/index.html
+++ b/index.html
@@ -1363,64 +1363,68 @@
         // =====================================================
         let planos = [
             {
-                id: '72e555c3-d5a3-44cb-a76f-d0e95f9e2706',
-                nome: 'Gratuito',
-                preco_mensal: 0,
-                preco_anual: 0,
-                descricao: 'Plano gratuito para teste',
-                destaque: false,
-                ordem: 0,
-                features: []
-            },
-            {
-                id: '7b049e15-47d6-4b45-8abe-303a926c0199',
+                id: '3027fa3f-0905-4eac-a4a0-768d46423750',
                 nome: 'Starter',
                 preco_mensal: 79,
                 preco_anual: 759,
                 descricao: 'Ideal para pequenos negócios',
                 destaque: false,
                 ordem: 1,
-                features: ['5.000 produtos', '3 usuários', '1 loja', 'Suporte por email',]
+                features: [
+                    '5.000 produtos (Banco de Dados)',
+                    '3 usuários',
+                    '1 loja',
+                    'Suporte por e-mail',
+                    'Relatórios',
+                    'Exportação de dados'
+                ]
             },
             {
-                id: 'ec582d76-260c-4012-8cb1-44a8a28ac5eb',
+                id: '41170fa3-aef2-4f9b-a38f-cd9e05fd3ab3',
                 nome: 'Básico',
                 preco_mensal: 149,
                 preco_anual: 1429,
                 descricao: 'Para negócios em crescimento',
                 destaque: true,
                 ordem: 2,
-                features: ['10.000 produtos', '10 usuários', '3 lojas', 'Suporte prioritário',]
+                features: [
+                    '10.000 produtos (Banco de Dados)',
+                    '10 usuários',
+                    '3 lojas',
+                    'Suporte prioritário',
+                    'Relatórios avançados',
+                    'Exportação de dados'
+                ]
             },
             {
-                id: '8f4aaa4d-c2ce-484c-b3f7-a98fa263319e',
+                id: '95442bbd-5ab7-47a3-9884-c7bb8fe94018',
                 nome: 'Profissional',
                 preco_mensal: 299,
                 preco_anual: 2869,
                 descricao: 'Para redes de lojas',
                 destaque: false,
                 ordem: 3,
-                features: ['50.000 produtos', '30 usuários', '10 lojas', 'Suporte prioritário']
+                features: [
+                    '50.000 produtos (Banco de Dados)',
+                    '30 usuários',
+                    '10 lojas',
+                    'Suporte prioritário',
+                    'Relatórios personalizados',
+                    'Treinamento incluso'
+                ]
             },
             {
-                id: '80177a42-ebcd-4cee-ae58-43211b4bfde1',
-                nome: 'Personalizado',
-                preco_mensal: 0,
-                preco_anual: 0,
-                descricao: 'Plano customizado para suas necessidades',
-                destaque: false,
-                ordem: 4,
-                features: ['Produtos personalizados', 'Usuários personalizados', 'Lojas personalizadas', 'Suporte dedicado']
-            },
-            {
-                id: '665e3eb9-ca1e-499d-a40b-275aa5e4f080',
+                id: '5ea791b0-b053-4943-996e-036438c0cffe',
                 nome: 'Enterprise',
                 preco_mensal: 0,
                 preco_anual: 0,
                 descricao: 'Solução completa para grandes empresas',
                 destaque: false,
-                ordem: 5,
-                features: ['Produtos ilimitados', 'Usuários ilimitados', 'Lojas ilimitadas', 'Integrações customizadas']
+                ordem: 4,
+                features: [
+                    'Todas as outras funcionalidades',
+                    'Sob Consulta'
+                ]
             }
         ];
         let isAnual = false;
@@ -1450,8 +1454,8 @@
                 const preco = isAnual ? plano.preco_anual : plano.preco_mensal;
                 const periodo = isAnual ? '/ano' : '/mês';
                 const isFeatured = plano.destaque;
-                const isContact = preco === 0 && (plano.nome === 'Personalizado' || plano.nome === 'Enterprise');
-                const isFree = plano.nome === 'Gratuito';
+                const isContact = plano.nome === 'Enterprise';
+                const isFree = false;
 
                 let features = [];
                 try {
@@ -1492,7 +1496,7 @@
                         <div class="plan-cta">
                             ${isContact ? `
                                 <a href="help/contato.html" class="btn btn-outline">
-                                    Falar com Vendas
+                                    Entre em Contato
                                 </a>
                             ` : `
                                 <a href="app/trial.html" class="btn ${isFeatured ? 'btn-primary' : 'btn-outline'}">
