--- a/app/planos.html
+++ b/app/planos.html
@@ -360,7 +360,7 @@
 
     <!-- Footer -->
     <footer class="pricing-footer">
-        <p>Dúvidas? Entre em contato: <a href="mailto:datacerta.contato@gmail.com">datacerta.contato@gmail.com</a></p>
+        <p>Dúvidas? Entre em contato: <a href="../help/contato.html">Clique Aqui</a></p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
