Atualizações pasta de admin.

--- a/admin/alertas.html
+++ b/admin/alertas.html
@@ -206,6 +206,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../js/supabase.js"></script>
+    <script src="js/notificacoes_admin.js"></script>
     <script src="js/admin.js"></script>
     <script src="js/alertas.js"></script>
 </body>
