--- a/admin/planos.html
+++ b/admin/planos.html
@@ -124,6 +124,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../js/supabase.js"></script>
+    <script src="js/notificacoes_admin.js"></script>
     <script>
         // Aguardar Supabase
         window.addEventListener('supabaseReady', initPlanos);
