--- a/admin/empresas.html
+++ b/admin/empresas.html
@@ -244,6 +244,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../js/supabase.js"></script>
+    <script src="js/notificacoes_admin.js"></script>
     <script src="js/empresas.js"></script>
 </body>
 
