--- a/admin/mensagens.html
+++ b/admin/mensagens.html
@@ -259,6 +259,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../js/supabase.js"></script>
+    <script src="js/notificacoes_admin.js"></script>
     <script src="js/mensagens.js"></script>
 </body>
 
