--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -845,19 +845,6 @@
         <div class="kpi-section">
             <div class="kpi-section-title">Quantidades (unidades)</div>
             <div class="kpi-strip qty">
-                <div class="kpi-card">
-                    <div class="kpi-header">
-                        <div class="kpi-label">Total Produtos</div>
-                        <div class="kpi-icon-wrapper teal">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path
-                                    d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z" />
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="kpi-value" id="kpiTotalProdutos">-</div>
-                    <div class="kpi-sublabel"><span>Cadastrados</span></div>
-                </div>
 
                 <div class="kpi-card">
                     <div class="kpi-header">
@@ -918,17 +905,16 @@
 
                 <div class="kpi-card">
                     <div class="kpi-header">
-                        <div class="kpi-label">Em Estoque</div>
+                        <div class="kpi-label">Vendidos</div>
                         <div class="kpi-icon-wrapper green">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M12 2L2 7l10 5 10-5-10-5z" />
-                                <path d="M2 17l10 5 10-5" />
-                                <path d="M2 12l10 5 10-5" />
+                                <path d="M9 11l3 3L22 4" />
+                                <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11" />
                             </svg>
                         </div>
                     </div>
-                    <div class="kpi-value" id="kpiEmEstoque">-</div>
-                    <div class="kpi-sublabel"><span>Disponível</span></div>
+                    <div class="kpi-value" id="kpiVendidosQtd">-</div>
+                    <div class="kpi-sublabel"><span>Total período</span></div>
                 </div>
             </div>
         </div>
@@ -937,19 +923,6 @@
         <div class="kpi-section">
             <div class="kpi-section-title">Valores (R$)</div>
             <div class="kpi-strip val">
-                <div class="kpi-card">
-                    <div class="kpi-header">
-                        <div class="kpi-label">Total Produtos</div>
-                        <div class="kpi-icon-wrapper teal">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <line x1="12" y1="1" x2="12" y2="23" />
-                                <path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6" />
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="kpi-value" id="kpiValorTotal">-</div>
-                    <div class="kpi-sublabel"><span>Valor total</span></div>
-                </div>
 
                 <div class="kpi-card">
                     <div class="kpi-header">
@@ -1009,7 +982,7 @@
 
                 <div class="kpi-card">
                     <div class="kpi-header">
-                        <div class="kpi-label">Em Estoque</div>
+                        <div class="kpi-label">Vendidos</div>
                         <div class="kpi-icon-wrapper green">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <line x1="12" y1="1" x2="12" y2="23" />
@@ -1017,8 +990,8 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="kpi-value" id="kpiValorEstoque">-</div>
-                    <div class="kpi-sublabel"><span>Disponível</span></div>
+                    <div class="kpi-value" id="kpiVendidosValor">-</div>
+                    <div class="kpi-sublabel"><span>Total período</span></div>
                 </div>
             </div>
         </div>
